egress-external-https-proxy-integration/service-mesh/simple-istio-mtls/virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: external-app-through-egress-gateway
spec:
  hosts:
  - external-app.corp.net
  gateways:
  - istio-egressgateway
  - mesh
  http:
  - match:
    - gateways:
      - mesh
      port: 80
    route:
    - destination:
        host: istio-egressgateway.istio-system.svc.cluster.local
        subset: external-app
        port:
          number: 80
      weight: 100
  - match:
    - gateways:
      - istio-egressgateway
      port: 80
    route:
    - destination:
        host: external-app.corp.net
        port:
          number: 80
      weight: 100
